controller-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: stockflow-controller
    labels:
      app: stockflow-controller
spec:
    replicas: 1
    selector:
      matchLabels:
        app: stockflow-controller
    template:
      metadata:
        labels:
          app: stockflow-controller
      spec:
        serviceAccountName: controller-svc-acc
        containers:
        - name: stockflow-controller
          image: kingaiva/stockflow-controller:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              name: sc-port
