signal-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: signal-engine
    labels:
      app: signal-engine
spec:
    replicas: 1
    selector:
      matchLabels:
        app: signal-engine
    template:
      metadata:
        labels:
          app: signal-engine
      spec:
        containers:
        - name: signal-engine
          image: kingaiva/signal-engine:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: se-port
