ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockflow-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: tekpeek.duckdns.org
      http:
        paths:
          - path: /dev/api
            pathType: Prefix
            backend:
              service:
                name: signal-engine-service
                port:
                  number: 8000
          - path: /dev/api/admin
            pathType: Prefix
            backend:
              service:
                name: sf-ctrl-service
                port:
                  number: 9000
  tls:
    - hosts:
        - tekpeek.duckdns.org
